; ModuleID = '/home/carl/AnghaBench/kphp-kdb/image/extr_image-data.c_free_stack.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/image/extr_image-data.c_free_stack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.forth_stack = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.forth_stack*, i32, i32)* @free_stack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_stack(%struct.forth_stack* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.forth_stack*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.forth_stack* %0, %struct.forth_stack** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  store i32 %8, i32* %7, align 4
  br label %9

9:                                                ; preds = %21, %3
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp sle i32 %10, %11
  br i1 %12, label %13, label %24

13:                                               ; preds = %9
  %14 = load %struct.forth_stack*, %struct.forth_stack** %4, align 8
  %15 = getelementptr inbounds %struct.forth_stack, %struct.forth_stack* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = load i32, i32* %7, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %16, i64 %18
  %20 = call i32 @free_stack_entry(i32* %19)
  br label %21

21:                                               ; preds = %13
  %22 = load i32, i32* %7, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %7, align 4
  br label %9

24:                                               ; preds = %9
  ret void
}

declare dso_local i32 @free_stack_entry(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
